added view projects button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <th>Name</th>
           <th>Total Score</th>
           <th>Breakdown</th>
+          <th>Closing Project</th>
         </tr>
       </thead>
       <tbody>
