fixed oasis image issue

--- a/projects/Oasis/index.html
+++ b/projects/Oasis/index.html
@@ -14,7 +14,7 @@
         <li>my best food is rice</li>
     </ul>
     <div class="love">
-        <img class="nice" src="oasis/love.jpg" alt="">
+        <img class="nice" src="./images/love.jpg" alt="">
         <p>
             Oasis is the best
         </p>
